# database.zig

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon
.github/: copilot-instructions.md
bindings/nodejs/: package-lock.json  package.json  tsconfig.json  typecheck.ts
bindings/python/: pyproject.toml
bindings/rust/: Cargo.toml
bindings/rust/src/: lib.rs
docs/: architecture.md  native-driver-linking.md  type-mapping.md
drivers/: README.md
drivers/bigquery/: README.md
drivers/clickhouse/: README.md
drivers/databricks/: README.md
drivers/duckdb/: README.md
drivers/mysql8/: README.md
drivers/postgresql/: README.md
drivers/redshift/: README.md
drivers/snowflake/: README.md
drivers/sqlserver/: README.md
drivers/template/: Cargo.toml
drivers/trino/: README.md
scripts/: build_surrealdb_c_vendor_lib.sh  download_adbc_prebuilt_drivers.sh  download_adbc_registry_drivers.sh  download_surrealdb_c_source.sh  fetch_adbc_driver_manager.sh  run_surrealdb_c_zig_poc.sh
src/: c_api_root.zig  root.zig
src-aq-core/: README.md  root.zig  tests.zig
src-aq-core/fixtures/: embedded_seed.surql
src/core/: adbc_backend.zig  driver.zig  manager.zig  registry.zig  types.zig
src/ffi/: c_api.zig
tests/: README.md
tests/nodejs/: support.js  support.ts  test_bigquery.test.ts  test_clickhouse.test.ts  test_databricks.test.ts  test_duckdb.test.js  test_duckdb.test.ts  test_exasol.test.ts  test_mssql.test.ts  test_postgres.test.js  test_postgres.test.ts  test_postgres_flightsql.test.ts  test_snowflake.test.ts  test_starrocks.test.js  test_trino.test.ts  (+4 more)
(+39 files in other folders)
