[package]
name = "aq_database"
version = "0.1.0"
edition = "2021"
description = "Thin Rust bindings for the database.zig C ABI"
license = "MIT"

[lib]
name = "aq_database"
path = "src/lib.rs"

[[test]]
name = "test_value_conversion"
path = "../../tests/rust/test_value_conversion.rs"

[[test]]
name = "test_duckdb"
path = "../../tests/rust/test_duckdb.rs"

[[test]]
name = "test_postgres"
path = "../../tests/rust/test_postgres.rs"

[[test]]
name = "test_postgres_flightsql"
path = "../../tests/rust/test_postgres_flightsql.rs"

[[test]]
name = "test_starrocks"
path = "../../tests/rust/test_starrocks.rs"

[[test]]
name = "test_snowflake"
path = "../../tests/rust/test_snowflake.rs"

[[test]]
name = "test_trino"
path = "../../tests/rust/test_trino.rs"

[[test]]
name = "test_clickhouse"
path = "../../tests/rust/test_clickhouse.rs"

[[test]]
name = "test_exasol"
path = "../../tests/rust/test_exasol.rs"